--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -40,7 +40,10 @@
         </nav>
 
         <section id="home_brand_info " class="text-center ms-5 container-fluid overflow-auto">
-
+         
+          <li class="list-group-item">
+            <h4>Appareil : {{ data.shop[0].title }}</h4>
+          </li>
            
             <!--BRAND INFO -->
             <div class="d-flex justify-content-center">
