board mais sa bug

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -42,7 +42,7 @@
         <section id="home_brand_info " class="text-center ms-5 container-fluid overflow-auto">
          
           <li class="list-group-item">
-            <h4>Appareil : {{ data.shop[0].title }}</h4>
+            <!-- <h4>Appareil : {{ data.shop[0].title }}</h4> -->
           </li>
            
             <!--BRAND INFO -->
