--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -41,9 +43,9 @@
 
         <section id="home_brand_info " class="text-center ms-5 container-fluid overflow-auto">
          
-          <li class="list-group-item">
-            <!-- <h4>Appareil : {{ data.shop[0].title }}</h4> -->
-          </li>
+            <ng-container *ngFor="let board of boards">
+                <h2>{{boards.shape}}</h2>
+              </ng-container>
            
             <!--BRAND INFO -->
             <div class="d-flex justify-content-center">
