--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -43,8 +43,8 @@
 
         <section id="home_brand_info " class="text-center ms-5 container-fluid overflow-auto">
          
-            <ng-container *ngFor="let board of boards">
-                <h2>{{boards.shape}}</h2>
+            <ng-container *ngFor="let Board of this.Boards">
+                <h2>{{Board.shape}}</h2>
               </ng-container>
            
             <!--BRAND INFO -->
