--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -140,18 +140,39 @@ h3{
 
     background-color: #EFEFEF;
     margin-bottom: 0px;
-   border:  solid 20px #b8e9ef;
-   border-bottom: solid 2px;
-   border-top: 2px solid;
-   border-color: #b8e9ef;
+   border:  solid 20px #13616d;
+   border-bottom: solid 5px #13616d;
+   border-top: solid 5px #13616d ;
+  border-radius: 3px;
+  background-clip: border-box;
    font-family: Poppins,sans-serif;
    padding-top: 1px;
    padding-bottom: 1px; 
+   margin-bottom: 0px;
+
+font-size: 12px;
+text-transform: lowercase;
+
+position: relative;
+display: flex;
+flex-direction: column;
+min-width: 0;
+word-wrap: break-word;
+background-color: #fff;
+background-clip: border-box;
+border: 1px solid rgba(0,0,0,.125);
+border-radius: .25rem;
+line-height: 1.3;
+font-weight: 400;
   }
   
   .voir_div{
     display: flex;
-    
+    padding: 2px 15px;
+    background-color: #13616d;
+    transform: translate3d(0px, 100%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg);
+transform-style: preserve-3d;
+box-sizing: border-box;
   justify-content: center;
 }
 .art_board_bot{
