--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -52,7 +52,6 @@ h3{
     
 }
   
- 
   .voir_p{
   
 
@@ -87,6 +86,7 @@ font-weight: 400;
   .voir_div{
     display: flex;
     padding: 2px 15px;
+    border-radius: 3px;
     background-color: #13616d;
     transform: translate3d(0px, 100%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg);
 transform-style: preserve-3d;
@@ -200,7 +200,9 @@ box-sizing: border-box;
            width: 200px;
        }
    
-     
+     #home_title{
+        font-size: 50px; 
+     }
 }
 
 /* fix footer text */
@@ -238,4 +240,7 @@ box-sizing: border-box;
     #SEALOCKER{
         font-size: 16px !important;
     }
+    #home_title{
+        font-size: 30px; 
+     }
 }
