--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -183,7 +183,50 @@ box-sizing: border-box;
 #footer_block{
  display: flex;       
 }
+#test{
+    color: #13616d;
+    background-color: #13616d;
+    margin: 0px;
+    height: 1px;
+}
 
+.DLspinner { display: none !important; }
+
+
+/*POPUP*/
+.overlay {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: none;
+    overflow: auto;
+  
+  }
+  
+  .popup {
+      
+    margin: 10% auto;
+    width: 80%;
+    background-color: #FFFFFF;
+    position: relative;
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
+    overflow: auto;
+    padding-bottom: 0;
+  
+  
+  }
+  
+.btnClose {
+
+    font-size: 16pt;
+    cursor: pointer;
+    color: rgb(26, 26, 26);
+  }
 
 /* MEDIA QUERRY */
 
