--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,17 +2,16 @@
   <main class="d-flex">
 
     <!--NAVBAR -->
-    <nav class="fixed-left " id="home_navbar">
+    <nav class="fixed-left rounded-end" id="home_navbar">
+
+
       <!-- Flèche nav pour mobile -->
-      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" id="home_nav_row" fill="currentColor"
-        class=" bi bi-arrow-left-right d-flex fs-1 	d-block d-sm-none" viewBox="0 0 16 16">
-        <path fill-rule="evenodd"
-          d="M1 11.5a.5.5 0 0 0 .5.5h11.793l-3.147 3.146a.5.5 0 0 0 .708.708l4-4a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708.708L13.293 11H1.5a.5.5 0 0 0-.5.5zm14-7a.5.5 0 0 1-.5.5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H14.5a.5.5 0 0 1 .5.5z" />
-      </svg>
-      <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/LOGO_sans_hallo.png" alt="logo"></a>
-      <a  class="nav-link" href="#"><img src="assets/img/3.png" alt="tuto app1"></a>
-      <a class="nav-link" href="#"><img src="assets/img/photo.png" alt="tuto app2"></a>
-      <a class="nav-link disabled"><img src="assets/img/maplogo.png" alt="tuto app3"></a>
+      <p id="test" >test</p>
+      
+      <img class="nav-link active" src="assets/img/LOGO_sans_hallo.png" alt="logo">
+      <img class="nav-link" src="assets/img/3.png" alt="tuto app1">
+      <img class="nav-link" src="assets/img/photo.png" alt="tuto app2">
+      <img class="nav-link" src="assets/img/maplogo.png" alt="tuto app3">
     </nav>
 
     <section id="home_brand_info " class="text-center ms-5 container-fluid overflow-auto">
@@ -35,7 +34,7 @@
         </div>
         <div *ngIf="data != undefined">
 
-            <h2 class="gris Caveat fs-4 mb-0 text-uppercase fw-bold">{{data.partner.bio}}</h2>
+            <h2 id="bio" class="gris Caveat fs-4 mb-0 mx-5 text-uppercase fw-bold">{{data.partner.bio}}</h2>
             
     
         </div>
@@ -43,23 +42,48 @@
 
       </ng-container>
 
+      
+      <!-- POPUP A STYLISER -->
+    <div id="overlay" class="overlay ">
+      
+      <div id="popup" class="popup rounded-3 position-relative">
 
+        <span id="btnClose" (click)="closePopup()" class="btnClose position-absolute top-0 end-0 "><i
+          class="las la-times-circle gris fs-1"></i></span>
+          <div id="popup_header">
+            
 
+              <h1 id="popup_h1" class="mb-3 fw-bold display-3 mt-3 mb-3">Test cette planche en téléchargeant l'app Sealocker</h1>
+            
+              <div id="app" class="mt-5 ">
+                <img src="https://popup-sealocker.herokuapp.com/assets/imgs/app-store-apple.png"
+            class="img-fluid p-4 m-4 border mb-3 border-3 rounded-3 bg-dark" alt="apple-logo">
+          <img src="https://popup-sealocker.herokuapp.com/assets/imgs/app-store-google.png"
+            class="img-fluid  p-4 m-4 border mb-3 border-3 rounded-3 bg-dark" alt="google-logo">
+            </div>
+          </div>
+         
+
+         
+          
+      </div>
+  </div>
 
       <!--BOARD SECTION-->
       <div  *ngIf="data != undefined" class="container-fluid   d-flex flex-row justify-content-around mt-5" id="home_board_section">
         <div class="row justify-content-center" id="home_display_boards">
+          
           <!--Board dynamique-->
-          <ng-container *ngFor="let board of data.boards">
-            <div  class="home_card col-3 art_board d-flex flex-column  p-1 mb-3" style="width: 28rem;">
-              <div class="position-relative" style="background-color: #f6f6f6;;">
+          <ng-container *ngFor="let board of data.boards;let i = index" >
+            <div id="article-{{i}}" (click)="clickBoards(i)" class="home_card col-3 art_board d-flex flex-column  p-1 mb-3" style="width: 28rem;">
+              <div class="position-relative rounded-3" style="background-color: #f6f6f6;;">
                 <img src="{{board.images[0]}}" alt="planche" style="height: 25vh; " class="rounded mt-1">
-                <div id="article-' + i + '" class="voir_div  position-absolute top-100 start-50 translate-middle">
-                  <p class="voir_p fw-bold px-1 fs-5 text-center "> Réserver</p>
+                <div class="voir_div  position-absolute top-100 start-50 translate-middle">
+                  <p class="voir_p fw-bold px-1 fs-5 text-center fst-italic"> Réserver</p>
                 </div>
               </div>
               <div class="border-bottom">
-                <h5 class="board_details_h2 fs-4 fw-bold mt-3 text-uppercase">{{board.size_ft}} \{{board.size_inch}} -
+                <h5 class="board_details_h2 fs-4 fw-bold mt-3 text-uppercase fst-italic">{{board.size_ft}} \{{board.size_inch}} -
                   {{board.shape}}</h5>
                 <p class="orange Caveat fs-3 fw-bold price">{{board.rental_price}}€/H</p>
               </div>
@@ -67,12 +91,17 @@
           </ng-container>
 
         </div>
+        <div  id="spinner" class="d-flex d-none justify-content-center">
+          <div class="spinner-border " role="status">
+            <span  class="visually-hidden ">Loading...</span>
+          </div>
+        </div>
       </div>
     </section>
 
   </main>
   <!--Footer-->
-  <footer class="fixed-bottom" id="home_footer">
+  <footer class="fixed-bottom rounded-top" id="home_footer">
     <section id="footerSection3" class="rounded-top text-center ">
 
       <div id="footer_block" class="justify-content-between">
@@ -87,9 +116,9 @@
         <div id="app3" class="d-flex me-5 mt-3 justify-content-around flex-lg-column">
 
           <img src="https://popup-sealocker.herokuapp.com/assets/imgs/app-store-apple.png"
-            class="img-fluid p-2 border mb-3 border-3 rounded bg-dark" alt="apple-logo">
+            class="img-fluid p-2 border mb-3 border-3 rounded-3 bg-dark" alt="apple-logo">
           <img src="https://popup-sealocker.herokuapp.com/assets/imgs/app-store-google.png"
-            class="img-fluid  p-2 border mb-3 border-3 rounded bg-dark" alt="google-logo">
+            class="img-fluid  p-2 border mb-3 border-3 rounded-3 bg-dark" alt="google-logo">
         </div>
       </div>
     </section>
