read more presque finit

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -120,8 +120,38 @@ box-sizing: border-box;
     height: 200px;
 }
 
-
-
+/*READ MORE*/
+div.collapsed {
+    display: -webkit-inline-box;
+    display: inline-block;
+    
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 85%;
+  }
+  
+  .readMore {
+      margin-top: -3px !important;
+      line-height: 1.4 !important;
+  }
+  
+  .isCollapsed {
+      width: 85%;
+  }
+  
+  .cb {
+      clear: both;
+      height: 0;
+  }
+  
+  .pull-right {
+    float: right;
+  }
+  
+  .pull-left {
+    float: left;
+  }
 
 /* New Home page */
 #home_navbar{
