--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -55,26 +55,33 @@
       <div id="popup" class="popup rounded-3 position-relative" >
 
         <span id="btnClose" (click)="closePopup()" class="btnClose position-absolute top-0 end-0 "><i
-          class="las la-times-circle gris fs-1"></i></span>
-          <div id="popup_header" >
+          class="las la-times-circle gris display-1"></i></span>
+          <div class="d-flex" >
+            <div class="d-flex">
+              <img src="{{data.partner.logo}}" alt="brand_logo" id="home_brand_logo" class="m-4">
+              <div id="popup_image"class="d-flex align-items-center"  style="height:60vh;"></div>
+            </div>
             
 
-              <h1 id="popup_h1" class="mb-3 fw-bold display-5 mt-3 mb-3">Teste cette planche en téléchargeant l'app Sealocker</h1>
-              <article class="">
-                <div id="popup_image" style="background-color: #f6f6f6;"></div>
-              <h2 id="popup_brand_model"></h2>
-              <h2 id="popup_board_price"></h2>
+              
+              <article class="container-fluid d-flex justify-content-center flex-column">
+                
+              <h1 id="popup_brand_model"></h1>
+              <h2 id="popup_board_info"></h2>
+              <h2 class="gris mb-0 Caveat">je la teste !</h2><p  id="popup_board_price"></p>
+              <p class="text-uppercase d-flex justify-content-center flex-column fs-3  rouge">Disponible a l'essaie à <span class="fw-bold">{{data.partner.city}}</span></p>
+              <button href="#" id="popup_h1" class="mx-5 mb-3 text-center rounded-3 btn Caveat text-uppercase fst-italic text-white fs-3 mt-3 mb-3">Téléchargez l'app pour tester</button>
               </article>
               
 
 
-              <div id="app" class="mt-2 ">
+              <!-- <div id="app" class="mt-2 ">
                 <a href="https://apps.apple.com/fr/app/sea-locker/id1550954820"><img src="https://popup-sealocker.herokuapp.com/assets/imgs/app-store-apple.png"
                   class="img-fluid p-4 m-4 border mb-3 border-3 rounded-3 bg-dark data_image" alt="apple-logo"></a>
                 <a href="https://play.google.com/store/apps/details?id=com.sealocker&gl=FR"><img src="https://popup-sealocker.herokuapp.com/assets/imgs/app-store-google.png"
                   class="img-fluid  p-4 m-4 border mb-3 border-3 rounded-3 bg-dark" alt="google-logo"></a>
           
-            </div>
+            </div> -->
           </div>
          
 
@@ -97,12 +104,40 @@
                 </div>
               </div>
               <div class="border-bottom">
+                <p class="text_hide board_info Caveat orange">{{board.size_ft}}'{{board.size_inch}}  {{board.width_decimal}} X {{board.width_inch}}   {{board.thickness_decimal}} X {{board.thickness_inch}}
+                 {{board.volume}} -L</p>
                 <h5 class="board_details_h2 fs-4 fw-bold mt-3 text-uppercase fst-italic">{{board.size_ft}}'{{board.size_inch}} -
                  <span class="data_brand_model">{{board.brand_model}}</span></h5>
                 <p class="orange Caveat fs-3 fw-bold price">{{board.rental_price}}€/H</p>
               </div>
             </div>
+
+
+            <!-- <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="{{board.images[0]}}" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="{{board.images[1]}}" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="{{board.images[2]}}" class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div> -->
           </ng-container>
+
+          
+
 
         </div>
         <div  id="spinner" class="d-flex d-none justify-content-center">
