--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -38,6 +38,9 @@ h3{
 .Caveat{
     font-family: 'Caveat', sans-serif ;
 }
+.Spartan{
+    font-family: 'Spantan', sans-serif ;
+}
 .orange{
     color: #f18f3a;
 }
@@ -247,7 +250,7 @@ div.collapsed {
   .popup {
       
     margin: 1% auto;
-    width: 80%;
+    width: 70%;
     background-color: #FFFFFF;
     position: relative;
     box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
@@ -267,6 +270,15 @@ div.collapsed {
   #popup_h1{
       background-color: #13616d;
   }
+  .popup_img{
+      height: 60vh;
+  }
+  .fs-1{
+      font-size: 4rem !important;
+  }
+  .fs-2{
+    font-size: 3rem !important;
+}
 
 /* MEDIA QUERRY */
 
@@ -275,6 +287,9 @@ div.collapsed {
 /* Tablette*/
 @media screen and (max-width: 1100px) {
  
+    .fs-1{
+        font-size: 2.5rem !important;
+    }
     #SEALOCKER{
         width: 60%;
     }
@@ -290,6 +305,9 @@ div.collapsed {
      #home_title{
         font-size: 50px; 
      }
+     #popup_image{
+        height: 40vh !important;
+    }
 }
 
 /* fix footer text */
@@ -306,6 +324,9 @@ div.collapsed {
 /*Ajuste main img*/
 @media screen and (max-width: 602px) {
 
+    .append_element{
+        margin: 0px !important;
+    }
     
     #SEALOCKER{
         font-size: 20px;
