--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -36,7 +36,7 @@
 
         
            
-          <button (click)="checkDataLength(bio)">bio</button>
+          <!-- <button (click)="checkDataLength(bio)">bio</button> -->
             <div>
               <app-readmore [isReadMore]="isReadMore">
                 <h2 id="bio" class="gris Caveat fs-4 mb-0 mx-5 text-uppercase fw-bold">{{bio}}</h2>
@@ -45,7 +45,7 @@
     
         </div>
       
-
+        
       </ng-container>
 
       
@@ -56,13 +56,49 @@
 
         <span id="btnClose" (click)="closePopup()" class="btnClose position-absolute top-0 end-0 "><i
           class="las la-times-circle gris display-1"></i></span>
+          <!-- <app-carousel>
+            <h2>{{bio}}</h2>
+          </app-carousel> -->  
           <div class="d-flex flex-column flex-md-row " >
             <div class="d-flex">
-              <img src="{{data.partner.logo}}" alt="brand_logo" id="home_brand_logo" class=" position-absolute top-0 start-0 ">
+              <img src="{{data.partner.logo}}" alt="brand_logo" id="home_brand_logo" class=" position-absolute top-0 start-0 m-3">
              
             </div>
             <!---->
             
+            <!-- <div class="carousel-inner">
+              <div *ngFor="let board of data.boards; let i=index" [ngClass]="(i === 0) ? 'active' : ''">
+                  <img src="{{board.images[0]}}" alt="img">
+                  <div class="container">
+                      <div class="carousel-caption">
+          
+                      </div>
+                  </div>
+              </div>
+          </div> -->
+
+
+          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div id="popup_image1" class="carousel-item active">
+        
+      </div>
+      <div  id="popup_image2" class="carousel-item">
+        <img src="../assets/img/images.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
 
             <!---->
@@ -111,12 +147,22 @@
       <!--BOARD SECTION-->
       <div  *ngIf="data != undefined" class="container-fluid   d-flex flex-row justify-content-around mt-5" id="home_board_section">
         <div class="row justify-content-center" id="home_display_boards">
+
+          
+
           
           <!--Board dynamique-->
           <ng-container *ngFor="let board of data.boards;let i = index" >
+           
             <div id="article-{{i}}" (click)="clickBoards(i)" class="home_card col-4 art_board d-flex flex-column  p-1 mb-3" style="width: 25rem;">
               <div class="position-relative rounded-3" style="background-color: #f6f6f6;">
+
+
+                
+                
                 <img src="{{board.images[0]}}" alt="planche" style="height: 35vh; " class="data_image rounded mt-1">
+                <img src="{{board.images[1]}}" alt="planche" style="height: 35vh; " class="data_image2 rounded mt-1 text_hide">
+
                 <div class="voir_div  position-absolute top-100 start-50 translate-middle">
                   <p class="voir_p fw-bold px-1 fs-5 text-center fst-italic"> Réserver</p>
                 </div>
@@ -153,10 +199,18 @@
                 <span class="visually-hidden">Next</span>
               </button>
             </div> -->
+
+            <div  *ngFor="let board of data.boards.images">
+              <div>
+                <img src="{{board.images}}" alt="planche" style="height: 35vh; " class="data_image rounded mt-1">
+              </div>
+              
+          
+            </div>
           </ng-container>
 
-          <app-carousel></app-carousel>  
-
+          
+          <input type="text" [(ngModel)]="currentMsgToChild1">
 
         </div>
         <div  id="spinner" class="d-flex d-none justify-content-center">
