--- a/frontend/src/app/carousel/carousel.component.html
+++ b/frontend/src/app/carousel/carousel.component.html
@@ -5,38 +5,19 @@
         </div>  
     </div>  
     <div class='col-12'>  
-        <ngb-carousel>  
-            <ng-template ngbSlide>  
-                <img src="../assets/Images/m2.jpg" alt="Delhi Metro">  
-                <div class="carousel-caption">  
-                    <h3 style="color: yellow">Delhi Metro</h3>  
-                </div>  
-            </ng-template>  
-            <ng-template ngbSlide>  
-                <img src="../assets/Images/m1.jpg" alt="Bangalore Metro">  
-                <div class="carousel-caption">  
-                    <h3 style="color: yellow">Bangalore Metro</h3>  
-                </div>  
-            </ng-template>  
-            <ng-template ngbSlide>  
-                <img src="../assets/Images/m4.jpg" alt="Channai Metro">  
-                <div class="carousel-caption">  
-                    <h3 style="color: yellow">Channai Metro</h3>  
-                </div>  
-            </ng-template>  
-            <ng-template ngbSlide>  
-                <img src="../assets/Images/m5.jpg" alt="Jaipur Metro">  
-                <div class="carousel-caption">  
-                    <h3 style="color: yellow">Jaipur Metro</h3>  
-                </div>  
-            </ng-template>  
-            <ng-template ngbSlide>  
-                <img src="../assets/Images/m3.jpg" alt="Mumbai Metro">  
-                <div class="carousel-caption">  
-                    <h3 style="color: yellow">Mumbai Metro</h3>  
-                </div>  
-            </ng-template>  
+        <p>{{ msgFromParent1 }}</p>
+        <ngb-carousel>
+        <ng-template ngbSlide *ngFor="let image of images">
+            <div class="wrapper">
+              <img [src]="image.src" alt="Random first slide">
+            </div>
+            <div class="carousel-caption">
+              <h3>{{ image.title }}</h3>
+              <p>{{ image.short }}</p>
+            </div>
+          </ng-template>
         </ngb-carousel>  
+        
     </div>  
   
 </div>  
