--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -87,10 +87,6 @@
             </div>
             <!--Carousel-->
 
-             
-           
-
-
 
               <div id="carouselExampleControls" class="carousel slide position-relative mt-5 align-self-center"  data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -222,11 +218,11 @@
         <div class="d-flex flex-column">
           <p class="fst-italic fs-1 text-start mb-0 text-uppercase Caveat board_details_h2">Telecharge l'app</p>
           <p class="text-nowrap text-start"> <span
-              class="fs-1 ms-2  fw-bold me-3 text-nowrap text-white">SEALOCKER</span><span id="SEALOCKER"
-              class=" fs-2 text-uppercase orange">pour tester une planche</span></p>
+              class="fs-2 ms-2  fw-bold me-3 text-nowrap text-white">SEALOCKER</span><span id="SEALOCKER"
+              class=" fs-3 text-uppercase orange">pour tester une planche</span></p>
         </div>
 
-        <div id="app3" class="d-flex me-5 mt-3 justify-content-around flex-lg-column">
+        <div id="app3" class="d-flex me-5 my-2 justify-content-around flex-xl-column">
 
           <a href="https://apps.apple.com/fr/app/sea-locker/id1550954820"><img
               src="https://popup-sealocker.herokuapp.com/assets/imgs/app-store-apple.png"
