--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,13 +1,47 @@
+
 <body>
+<!--POPUP SPINNER-->
+<!--SPINNER-->
+<div *ngIf="spinner != false" id="overlaySpinner"  class="position-relative ">
+
+  <div id="popupSpinner" class=" ">
+    <img class="d-flex flex-column position-absolute top-0 start-0 " src="assets/img/LOGO_sans_hallo.png" alt="logo"> 
+     <div class="d-flex flex-column position-absolute top-50 start-50 translate-middle-y">
+        
+      <div class="spinner-border " role="status">
+        
+        <span class="visually-hidden ">Loading...</span>
+      </div> 
+    </div> 
+  </div>
+</div> 
+
+<div *ngIf="spinner != false" id="overlaySpinner" class="overlay ">
+
+ 
+
+
+    <div  id="overlaySpinner" class=" ">
+
+      <div id="popupSpinner" class=" ">
+        <div class="d-flex fs-1">
+          <div class="spinner-border  spinner-grow " role="status">
+            <span class="visually-hidden ">Loading...</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
   
-  
+</div>
+
 
 
   <main class="d-flex">
-    
-    
 
-    
+
+
+
 
 
     <!--NAVBAR -->
@@ -15,7 +49,7 @@
 
 
       <!-- Flèche nav pour mobile -->
-      <p id="test">test</p>
+      <!-- <p id="test">test</p> -->
 
       <img class="nav-link active" src="assets/img/LOGO_sans_hallo.png" alt="logo">
       <img class="nav-link" src="assets/img/3.png" alt="tuto app1">
@@ -23,33 +57,25 @@
       <img class="nav-link" src="assets/img/maplogo.png" alt="tuto app3">
     </nav>
 
-
-    <div *ngIf="spinner != false"  id="overlaySpinner" class=" ">
-        
-      <div  id="popupSpinner" class=" ">
-        <div class="d-flex fs-1">
-          <div class="spinner-border " role="status">
-            <span class="visually-hidden ">Loading...</span>
-          </div>
-        </div>
-      </div>
-    </div>
+    
 
     <section id="home_brand_info " class="text-center ms-5 container-fluid overflow-auto">
       <!--BRAND INFO -->
 
       <ng-container>
 
-        <div *ngIf="data != undefined" class="d-flex justify-content-center">
+        <div id="column_brand_info" *ngIf="data != undefined" class="d-flex justify-content-center">
           <div>
             <img src="{{data.partner.logo}}" alt="brand_logo" id="home_brand_logo" class="mt-4">
 
             <h1 class="d-flex flex-column  justify-content-center" id="home_title"> <span class="Caveat">THEY
                 ARE</span><span class="fw-bold ">{{data.shops[0].title}}</span></h1>
+
           </div>
           <div class="d-flex flex-column-reverse">
             <p class=" orange fw-bold" id="brand_location"><img id="pointeur" src="assets/img/pointeur(1).png"
                 alt="pointeur">{{data.partner.city}}</p>
+
           </div>
 
         </div>
@@ -65,11 +91,15 @@
           </div>
 
         </div>
+        <button (click)="mobilePopup()"  id="Sealocker_button" class="d-flex mt-3 btn btn-primary align-item-center text-center flex-column fst-italic"
+         role="button" data-bs-toggle="button">
+          Comment ça marche ?
 
+        </button>
 
       </ng-container>
 
-     
+
 
       <!-- POPUP A STYLISER -->
       <div id="overlay" class="overlay ">
@@ -78,7 +108,7 @@
 
           <span id="btnClose" (click)="closePopup()" class="btnClose position-absolute top-0 end-0 "><i
               class="las la-times-circle gris display-1"></i></span>
-         
+
           <div class="d-flex align-middle flex-column flex-md-row ">
             <div class="d-flex">
               <img src="{{data.partner.logo}}" alt="brand_logo" id="home_brand_logo"
@@ -88,34 +118,36 @@
             <!--Carousel-->
 
 
-              <div id="carouselExampleControls" class="carousel slide position-relative mt-5 align-self-center"  data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div id="popup_image1" class="carousel-item active">
-  
-                  </div>
-                  <div id="popup_image2" class="carousel-item">
-  
-                  </div>
-  
-                </div>
-                <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleControls"
-                  data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon  position-absolute bottom-0 end-0 mx-2 p-3 mb-5" aria-hidden="true"></span>
-                  <span class="visually-hidden ">Previous</span>
-                </button>
-                <button class="carousel-control-next  p-3 mb-5" type="button" data-bs-target="#carouselExampleControls"
-                  data-bs-slide="next">
-                  <span class="carousel-control-next-icon position-absolute bottom-0 start-0 mx-2 p-3" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-  
+            <div id="carouselExampleControls" class="carousel slide position-relative mt-5 align-self-center"
+              data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div id="popup_image1" class="carousel-item active">
 
-            
+                </div>
+                <div id="popup_image2" class="carousel-item">
+
+                </div>
+
+              </div>
+              <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon  position-absolute bottom-0 end-0 mx-2 p-3 mb-5"
+                  aria-hidden="true"></span>
+                <span class="visually-hidden ">Previous</span>
+              </button>
+              <button class="carousel-control-next  p-3 mb-5" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon position-absolute bottom-0 start-0 mx-2 p-3"
+                  aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+
+
+
 
             <!---->
-            <!-- <div id="popup_image" class="d-flex align-items-center container-fluid justify-content-center"
-              style="height:70vh;"></div> -->
+
             <article class="container-fluid d-flex justify-content-center flex-column">
 
               <h1 id="popup_brand_model"></h1>
@@ -126,7 +158,7 @@
                 <span class="fw-bold">{{data.partner.city}}</span></p>
               <div class="d-flex justify-content-center">
                 <button href="#" id="popup_h1"
-                  class="mx-5 mb-3 text-center rounded-3 btn Caveat text-uppercase fst-italic text-white fs-3 mt-3 mb-3">Téléchargez
+                  class="mx-5 mb-3 text-center rounded-3 btn btn-primary Spartan text-uppercase fst-italic text-white fs-3 mt-3 mb-3">Téléchargez
                   l'app pour tester</button>
 
               </div>
@@ -139,16 +171,38 @@
 
         </div>
       </div>
-     
+
+
+
+      <!--POPUP Mobile-->
+      <div id="overlayMobile" class="overlay ">
+
+        <div id="popupMobile" class="popup rounded-3 position-relative overflow-auto">
+
+          <span id="btnClose" (click)="closePopup()" class="btnClose position-absolute top-0 end-0 "><i
+              class="las la-times-circle gris display-1"></i></span>
+
+
+              
+      <img class="nav-link" src="assets/img/3.png" alt="tuto app1">
+      <img class="nav-link" src="assets/img/photo.png" alt="tuto app2">
+      <img class="nav-link" src="assets/img/maplogo.png" alt="tuto app3">
+
+        </div>
+      </div>
+
+
+      
+
 
       <!--BOARD SECTION-->
-      
+
       <div *ngIf="data != undefined" class="container-fluid   d-flex flex-row justify-content-around mt-5"
         id="home_board_section">
-        
+
         <div class="row justify-content-center" id="home_display_boards">
 
-          
+
 
 
           <!--Board dynamique-->
@@ -161,8 +215,9 @@
 
 
 
-                <img src="{{board.images[0]}}" alt="planche" style="height: 35vh; " class="data_image rounded mt-1">
-                <img src="{{board.images[1]}}" alt="planche" style="height: 35vh; "
+                <img *ngIf="board.images[0] != undefined" src="{{board.images[0]}}" alt="planche" style="height: 35vh; "
+                  class="data_image rounded mt-1">
+                <img *ngIf="board.images[1] != undefined" src="{{board.images[1]}}" alt="planche" style="height: 35vh; "
                   class="data_image2 rounded mt-1 text_hide">
 
                 <div class="voir_div  position-absolute top-100 start-50 translate-middle">
@@ -170,10 +225,13 @@
                 </div>
               </div>
               <div class="border-bottom">
-                <p *ngIf="board.size_ft  != undefined" class="text_hide board_info Caveat orange">{{board.size_ft}}'{{board.size_inch}} X
-                  {{board.width_decimal}} ' {{board.width_inch}} X {{board.thickness_decimal}} '
-                  {{board.thickness_inch}}
-                  -{{board.volume}} L</p>
+                <p class="text_hide board_info Caveat orange"><span
+                    *ngIf="board.size_ft && board.size_inch != undefined"> {{board.size_ft}}'{{board.size_inch}} </span>
+                  <span *ngIf="board.width_decimal && board.width_inch != undefined">X {{board.width_decimal}} '
+                    {{board.width_inch}} X</span> <span
+                    *ngIf="board.thickness_decimal && board.thickness_inch != undefined">{{board.thickness_decimal}} '
+                    {{board.thickness_inch}}</span>
+                  <span *ngIf="board.volume != undefined"> -{{board.volume}} L </span></p>
                 <h5 class="board_details_h2 data_brand_model fs-4 fw-bold mt-3 text-uppercase fst-italic">
                   {{board.brand_model}} - {{board.size_ft}}'{{board.size_inch}}</h5>
 
@@ -196,12 +254,8 @@
 
 
         </div>
-       
-       <!--  <div *ngIf="spinner != false" class="pull-left readMore" id="spinner" class="d-flex fs-1 justify-content-center">
-          <div class="spinner-border " role="status">
-            <span class="visually-hidden ">Loading...</span>
-          </div>
-        </div> -->
+
+
       </div>
     </section>
 
@@ -210,26 +264,26 @@
 
 
   <!--Footer-->
-  <footer class="fixed-bottom rounded-top" id="home_footer">
+  <footer *ngIf="spinner != true" class="fixed-bottom rounded-top" id="home_footer">
     <section id="footerSection3" class="rounded-top text-center ">
 
       <div id="footer_block" class="justify-content-between">
 
         <div class="d-flex flex-column">
-          <p class="fst-italic fs-1 text-start mb-0 text-uppercase Caveat board_details_h2">Telecharge l'app</p>
-          <p class="text-nowrap text-start"> <span
-              class="fs-2 ms-2  fw-bold me-3 text-nowrap text-white">SEALOCKER</span><span id="SEALOCKER"
-              class=" fs-3 text-uppercase orange">pour tester une planche</span></p>
+          <p id="telecharge_app_footer" class="fst-italic fs-1 text-start mb-0 text-uppercase Caveat board_details_h2">Telecharge l'app</p>
+          <p class="text-nowrap mb-0 text-start"> <span id="SEALOCKER"
+              class="fs-2 ms-2  fw-bold me-3 text-nowrap text-white">SEALOCKER</span><span 
+              id="test_planche_footer"  class=" fs-3 text-uppercase orange">pour tester une planche</span></p>
         </div>
 
-        <div id="app3" class="d-flex me-5 my-2 justify-content-around flex-xl-column">
+        <div id="app3" class="d-flex me-5 mt-2 justify-content-around ">
 
           <a href="https://apps.apple.com/fr/app/sea-locker/id1550954820"><img
               src="https://popup-sealocker.herokuapp.com/assets/imgs/app-store-apple.png"
-              class="img-fluid p-2 border mb-3 border-3 rounded-3 bg-dark" alt="apple-logo"></a>
+              class="img-fluid p-2 border mb-5 border-3 rounded-3 bg-dark" alt="apple-logo"></a>
           <a href="https://play.google.com/store/apps/details?id=com.sealocker&gl=FR"><img
               src="https://popup-sealocker.herokuapp.com/assets/imgs/app-store-google.png"
-              class="img-fluid  p-2 border mb-3 border-3 rounded-3 bg-dark" alt="google-logo"></a>
+              class="img-fluid  p-2 border mb-5 border-3 rounded-3 bg-dark" alt="google-logo"></a>
         </div>
       </div>
     </section>
